refactor: Java 스터디 챕터 번호 학습순 재부여 (raw + wiki)
- 회전 재부여: 입출력 ch10→05, Spring 5→6, SQL 6→7, 인증 7→8, 테스트 8→9, JVM 9→10
- 결과 번호=학습순서, "다음 장" 체인 ch00→…→11 자연 순서
- raw 6편 + wiki 6편 파일명 git mv + 링크·sources·tags·nav 회전 치환
- 본문 자연어 장번호 제거, Notion 원본 장번호는 raw/java-study/README 매핑표로 보존

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>